--- a/个人简介.md
+++ b/个人简介.md
@@ -1,4 +1,4 @@
-##**个人简介**
+##个人简介
 ---
 * 姓名：吴志杰
 * 性别：男
@@ -8,17 +8,43 @@
 * 政治面貌：清白
 * 学历：大专
 
-##个人技能
+##教育情况
+2002年9月-2005年6月 福建广播电视大学 计算机及应用
+
+##个人技能/专长
 ---
-* Ruby on Rails/PHP
-* HTML/CSS/Javascript
-* BDD/敏捷开发
-* MySql/MongoDB
-* Linux/Freebsd
+1. 有扎实的网络基础知识，了解TCP/IP、UDP等网络协议
+2. 精通HTML、JavaScript、CSS等网页设计语言
+3. 熟悉PHP、Ruby on Rails等WEB开发技术
+4. 精通MYSQL数据库及SQL语言
+5. 熟练使用Emacs、Textmate等开发工具
+6. 熟悉WEB服务器的架设，如：Linux、Freebsd、Nginx，会写shell来管理服务器
+7. 了解MongoDB、Redis等NoSql的原理和操作
+8. 了解OmniGraffle及一些原型工具，画原型图。
+9. 会PhotoShop来做简单的图片处理
 
 ##我的开发环境
 ---
-Mac + TextMate(Emacs) + Git
+Mac + TextMate + Git
+
+##我的工作经验
+---
+1. 漳州商机网络有限公司 2005年9月－2006年12月
+	第一家进的公司，什么都不会，就学会了那时还流行的asp+access帮企业做网站。
+	期间和同事做了一个《漳州企业信息网》，但是漳州比较大的网络门户，现在没有运营了。
+
+2. 福州新锐软件有限公司 2007年2月－2007年8月
+	从这家公司开始就开始用php开发，这家公司主要是做《房地产客户管理软件》，我主要也是帮房地产商制作的维护网站，主要php＋mysql开发，那时公司就我一个技术员，技术比较菜。
+	
+3. 福州百利亨投资管理有限公司 2007年8月－2009年2月
+	因为上一家公司的业务关系，介绍我到这家公司开发和维护http://www.agogoktv.com，期间整个技术部我负责，整个技术部有技术1人、美工2人、视频1人。网站后期用ThinkPHP制作，跟ktv的一套会员管理系统做整合。
+
+4. 福建网龙计算机网络信息技术有限公司 2009年4月－2013年5月
+	来网龙是因为一个以前同事做人事，介绍我过去，我的职责事负责游戏网站的开发和维护，里面的大牛很多，我也学到不少东西，我事从这个时候知道了Ruby on Rails这个优美的框架，期间也自荐的写了一些游戏后台脚本，主要用Python和Ruby。
+
+5. 待业 2013年6月－
+* 	主要不喜欢网龙经常没目的的加班和公司内部严重的官僚主义，在加上家里有事，就离职回到了老家，在老家和朋友做淘宝，没做成，我一直想着能找到一份跟Ruby有关的工作，希望各位大大有需要，一定要叫我。（以上观点纯属个人意见，如有雷同，不胜荣幸）
+
 
 ##爱好
 ---
@@ -39,7 +65,3 @@ Mac + TextMate(Emacs) + Git
 ---
 * Email: zzwzj2010@gmail.com
 * QQ: 279665245
-
-
-
-
